--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-	"name": "vite-project",
-	"version": "0.0.0",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"serve": "vite preview"
-	},
-	"devDependencies": {
-		"@types/three": "^0.128.0",
-		"typescript": "^4.2.3",
-		"vite": "^2.3.4"
-	},
-	"dependencies": {
-		"three": "^0.137.0"
-	}
+  "name": "akshatadsule.github.io",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.15"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15"
+  }
 }
